cmake_minimum_required(VERSION 3.13)
project(FORR3CG05DU)

set(CMAKE_CXX_STANDARD 17)

add_executable(FORR3CG05DU Skilaverkefni1/main.cpp Skilaverkefni1/course.cpp Skilaverkefni1/student.cpp Skilaverkefni1/Stack/stack.cpp Skilaverkefni1/stack/stackNode.cpp Skilaverkefni1/StudentDL/studentDL.cpp Skilaverkefni1/StudentDL/studentDLNode.cpp)

